--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
         <div class="contentBG">
         <nav>
-            <div class="logo"><img src="C:\Users\Asus\Downloads\Logo.svg" alt="" width="100px" height="100px"></div>
+            <div class="logo"><img src="logo.svg" alt="" width="100px" height="100px"></div>
             <div class="about">
                 <ul>
                     <li>Home</li>
@@ -45,7 +45,7 @@
             <div class="t1"><img src="logoNamee.svg"" alt=""></div>
             <div class="t1"><img src="logoNamee.svg"" alt=""></div>
             <div class="t1"><img src="logoNamee.svg"" alt=""></div>
-            <div class="t1"><img src=logoNamee.svg" alt=""></div>
+            <div class="t1"><img src="logoNamee.svg" alt=""></div>
         </div>
 
          <article>
