--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div class="r1">
                 <div class="pic ">
-                    <div class="over"><img src="cardimage1.png" alt="" >
+                    <div class="over"><img src="https://github.com/abhishekjain96/Five-Star-Hotel/blob/main/cardImage1.png?raw=true" alt="" >
                         <div class="overlay">
                             <div class="text"><h4>Mixtovonia</h4>
                             <h3>$205,500</h3></div>
