--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                 <div class="social">
                     <img src="facebook (1).png" alt="" width="30px" height="30px">
                     <img src="instagram (1).png" alt=""width="30px" height="30px">
-                    <img src="C:\Users\Asus\Downloads\twitter (1).png" alt=""width="30px" height="30px">
+                    <img src="twitter (1).png" alt=""width="30px" height="30px">
                 </div>
                 <div class="address">
 <p>123 Street, New York, USA. Hotel-123 always hold true to its word</p>
