--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
                 </div>
                 <div class="pic ">
-                    <div class="over over1"><img src="cardimage2.png" alt="" >
+                    <div class="over over1"><img src="https://github.com/abhishekjain96/Five-Star-Hotel/blob/main/cardImage2.png?raw=true" alt="" >
                         <div class="overlay">
                             <div class="text"><h4>Mixtovonia</h4>
                             <h3>$205,500</h3></div>
