--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   
         <div class="contentBG">
         <nav>
-            <div class="logo"><img src="logo.svg" alt="" width="100px" height="100px"></div>
+            <div class="logo"><img src="logoNamee.svg" alt="" width="100px" height="100px"></div>
             <div class="about">
                 <ul>
                     <li>Home</li>
@@ -208,7 +208,7 @@
 
         <footer>
             <div class="lf1">
-                <div class="logo"><img src="logo.svg" alt="" width="100px" height="100px"></div>
+                <div class="logo"><img src="logoNamee.svg" alt="" width="100px" height="100px"></div>
                 <div class="social">
                     <img src="facebook (1).png" alt="" width="30px" height="30px">
                     <img src="instagram (1).png" alt=""width="30px" height="30px">
