--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="blue">
                     <div class="white">
                         <div class="bgim">
-                            <img src="C:\Users\Asus\AppData\Local\Temp\46d45339-c822-4b4b-b7b9-d16051090b29_Hotelier Free Website Template - Free-CSS.com.zip.b29\hotel-html-template\img\room-3.jpg" alt="" width="350px" height="300px">
+                            <img src="https://github.com/abhishekjain96/Five-Star-Hotel/blob/main/room-3.jpg" alt="" width="350px" height="300px">
                         </div> </div>
                 </div>
                
@@ -182,7 +182,7 @@
                 <div class="blue1">
                     <div class="white1">
                         <div class="bgim1">
-                            <img src="C:\Users\Asus\AppData\Local\Temp\0287f8b9-fbfe-4714-ac0b-3cbed1d13ed0_Hotelier Free Website Template - Free-CSS.com.zip.ed0\hotel-html-template\img\video.jpg" alt="" width="350px" height="300px">
+                            <img src="https://github.com/abhishekjain96/Five-Star-Hotel/blob/main/video.jpg" alt="" width="350px" height="300px">
                         </div> </div>
                 </div>
                
