--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                 <div class="blue">
                     <div class="white">
                         <div class="bgim">
-                            <img src="https://github.com/abhishekjain96/Five-Star-Hotel/blob/main/room-3.jpg" alt="Hotel Pic" width="350px" height="300px">
+                            <img src="https://github.com/abhishekjain96/Five-Star-Hotel/blob/main/room-3.jpg?raw=true" alt="Hotel Picc" width="350px" height="300px">
                         </div> </div>
                 </div>
                
@@ -182,7 +182,7 @@
                 <div class="blue1">
                     <div class="white1">
                         <div class="bgim1">
-                            <img src="https://github.com/abhishekjain96/Five-Star-Hotel/blob/main/video.jpg" alt="HOTEL PICS" width="350px" height="300px">
+                            <img src="https://github.com/abhishekjain96/Five-Star-Hotel/blob/main/video.jpg?raw=true" alt="HOTEL PICS" width="350px" height="300px">
                         </div> </div>
                 </div>
                
